--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="col-lg-6" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
                     <div class="hero-image-container">
                         <div class="hero-image">
-                            <img src="images/profile_photo.jpg" alt="Patra Purbaya" class="profile-image">
+                            <img src="images/profile_photo.JPG" alt="Patra Purbaya" class="profile-image">
                         </div>
                         <div class="floating-icons">
                             <div class="floating-icon" style="--delay: 0s;"><i class="fab fa-flutter"></i></div>
@@ -97,7 +97,7 @@
                     <div class="about-image">
                         <div class="about-shape"></div>
                         <div class="about-placeholder">
-                            <img src="images/profile_photo.jpg" alt="Patra Purbaya" class="profile-image">
+                            <img src="images/profile_photo.JPG" alt="Patra Purbaya" class="profile-image">
                         </div>
                     </div>
                 </div>
