--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">&copy; <span id="current-year"></span> Patra Purbaya. <span data-i18n="footer.copyright">All rights reserved.</span></p>
+                    <p class="mb-0">&copy;2025 <span id="current-year"></span> Patra Purbaya. <span data-i18n="footer.copyright">All rights reserved.</span></p>
                 </div>
             </div>
         </div>
