--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- TODO:
+- Improve mobile version
+- Improve theme coloring
+-->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -44,7 +51,7 @@
                     <h2 class="mb-4" data-i18n="home.title">Senior Mobile Flutter Developer</h2>
                     <p class="lead mb-4" data-i18n="home.tagline">Transforming ideas into exceptional mobile experiences for Android and iOS since 2020.</p>
                     <div class="d-flex gap-3">
-                        <a href="#portfolio" class="btn btn-primary btn-lg" data-i18n="home.buttons.portfolio">View My Work</a>
+                        <a href="#portfolio" class="btn btn-primary btn-lg" data-i18n="home.buttons.portfolio">Portofolio</a>
                         <a href="#contact" class="btn btn-outline-light btn-lg" data-i18n="home.buttons.contact">Contact Me</a>
                     </div>
                 </div>
@@ -220,6 +227,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="script.js"></script>
+
+    <!-- Add these attributes to your offcanvas/navbar element if not already there -->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvas" aria-labelledby="navbarOffcanvasLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="navbarOffcanvasLabel">Patra Purbaya</h5>
+            <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <!-- Your existing navigation items remain the same -->
+            <!-- ... -->
+        </div>
+    </div>
+
+    <script>
+      // Force hide preloader
+      window.onload = function() {
+        var preloader = document.querySelector('.preloader') || document.getElementById('preloader');
+        if (preloader) preloader.style.display = 'none';
+      };
+      
+      // Failsafe
+      setTimeout(function() {
+        var preloader = document.querySelector('.preloader') || document.getElementById('preloader');
+        if (preloader) preloader.style.display = 'none';
+      }, 3000);
+    </script>
 </body>
 
 </html>
